--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Home of Ladder-Tite</p>
 
 
-        <p class="view"><a href="https://github.com/roguevalleyinnovations">View My GitHub Profile</a></p>
+        <!-- <p class="view"><a href="https://github.com/roguevalleyinnovations">View My GitHub Profile</a></p>-->
 
       </header>
       <section>
